--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "amazon-dax-client": "^1.2.9",
+    "aws-sdk": "^2.1691.0",
+    "perf_hooks": "^0.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
